tests/fixtures/invalid/pow_bool_dict_str.py
# Cannot call pow() with Bool, Dict[str, int], Str
x = pow(True, {"a": 1}, "hello")
